# project-VL

./: pyproject.toml
common/: models.py
config/: settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py
matches/: admin.py  models.py  serializer.py  urls.py  views.py
matches/migrations/: 0001_initial.py  0002_match_test_opposite_match_test_player.py
notices/: admin.py  models.py
notices/migrations/: 0001_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_remove_user_is_host_user_lose_user_point_user_win.py
